examples/negative/type_name_collision/import_collision/main.kai
# Negative fixture (#518): user-declared `type Widget` collides
# with `pub type Widget[k, v]` exported by an imported module.
# Stage 2 rejects up front with a precise diagnostic at the user
# site, instead of letting downstream pattern-exhaustiveness
# silently bind `match` arms to the imported constructors and
# emit "missing WLeaf, WNode" — names the user never wrote.

import lib

type Widget = Leaf | Node(Int, Widget, Widget)

fn size(t: Widget) : Int = match t {
  Leaf -> 0
  Node(_, l, r) -> 1 + size(l) + size(r)
}

fn main() : Int = size(Leaf)
